# i

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md  i-bin-0.1.0-1-x86_64.pkg.tar.zst
pkg/i-bin/: .BUILDINFO  .MTREE  .PKGINFO
src/: i.rs  main.rs
